--- a/dezincekciya/komary.html
+++ b/dezincekciya/komary.html
@@ -296,11 +296,41 @@
     <!-- Подвал -->
     <!-- НАЧАЛО -->
     <footer>
+        <div class="modal-own-container">
+            <p class="modal-top-text">
+                <span class="modal-top-text-small">Проблемы с вредителями?</span>
+                <span class="modal-top-text-big"> Свяжитесь с нами прямо сейчас!</span>
+                <button class="btn  btn-light ms-5 mb-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Связаться с нами!</button>
+            </p>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Свяжитесь с нами!</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Ваше имя</label>
+                                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Ваш номер телефона</label>
+                                    <input type="number" maxlength="15" min="0" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Отправить</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row_top_footer mb-5"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-2 text-left footer">
-                        <p class="footer_title"><img src="../img/logo_for_the_header.jpg" width="40px" height="40px" alt=""> DEZSAN</p>
+                        <p class="footer_title"><img src="img/logo_for_the_header.jpg" width="40px" height="40px" alt=""> DEZSAN</p>
                         <p class="footer_content">ООО "ДЕЗСАН"</p>
                         <p class="footer_content">ЕГРПОУ 43469157</p>
                     </div>
