--- a/desinphekciya.html
+++ b/desinphekciya.html
@@ -207,7 +207,7 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/ikonka_102h102_mysh.png" alt=""> 
+                                    <img src="" alt=""> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Вирус</h3>
