--- a/deratizaciya/maus.html
+++ b/deratizaciya/maus.html
@@ -90,7 +90,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(../img/мышь\ 1..jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(../img/mysh_polosataya_gryzun_111876_3840x2400.jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -350,7 +350,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-2 text-left footer">
-                        <p class="footer_title"><img src="img/logo_for_the_header.jpg" width="40px" height="40px" alt=""> DEZSAN</p>
+                        <p class="footer_title"><img src="../img/logo_for_the_header.jpg" width="40px" height="40px" alt=""> DEZSAN</p>
                         <p class="footer_content">ООО "ДЕЗСАН"</p>
                         <p class="footer_content">ЕГРПОУ 43469157</p>
                     </div>
