--- a/desinphekciya/grib.html
+++ b/desinphekciya/grib.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="../img/dezodoracija.png" type="image/x-icon">
 
-    <title>Плесень</title>
+    <title>Грибок</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/style_first_block_with_photo_and_send_form.css">
     <link rel="stylesheet" href="../css/style_enter_to_organization.css">
     <link rel="stylesheet" href="../css/style_content_on_main_page.css ">
-    <link rel="stylesheet" href="../css/style_text_on_page_plesen.css">
+    <link rel="stylesheet" href="../css/style_text_on_page_grib.css">
     <link rel="stylesheet" href="../css/style_send_form.css">
     <link rel="stylesheet" href="../css/style_garantiya.css">
     <link rel="stylesheet" href="../css/style_pest-control.css">
@@ -90,12 +90,12 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(../img/плесень\ 1.jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(../img/griby_listya_trava_112713_3840x2400.jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
                     <div class="first_block__text_content">
-                        <h1 class="first_block__main_text">Борьба с плесенью в квартирах</h1>
+                        <h1 class="first_block__main_text">Уничтожение грибка</h1>
                         <ol class="first_block__list_with_text">
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Только профессиональные методы борьбы с плесенью</span>
@@ -150,9 +150,9 @@
 
     <!-- Ввод -->
     <!-- НАЧАЛО -->
-    <div class="container plesen__container mt-4 mb-5">
-        <div class="plesen__content">
-            <p class="plesen__text">Крысы могут доставить много неприятностей, перегрызая провода, приводя в негодность мебель и другое имущество. Что и говорить о съестных запасах, которые начинают уничтожаться с огромной скоростью. Но все это не идет ни в какое сравнение с заболеваниями, которые переносят эти грызуны — именно они являются основной причиной начать уничтожение крыс в доме.</p>
+    <div class="container grib__container mt-4 mb-5">
+        <div class="grib__content">
+            <p class="grib__text"></p>
         </div>
     </div>
     <!-- КОНЕЦ -->
@@ -182,14 +182,14 @@
 
     <!-- Уничтожение клопов на дачном участке -->
     <!-- НАЧАЛО -->
-    <div class="container kill_plesen_on_dacha__container mt-4">
-        <div class="row kill_plesen_on_dacha__content">
-            <div class="offset-lg-1 col-lg-10 offset-md-1 col-md-10 kill_plesen_on_dacha__block_main_text text-center">
-                <p class="kill_plesen_on_dacha__main_text"><span style="color:red; font-weight: 800;">Уничтожение </span>плесени</p>
+    <div class="container kill_grib_on_dacha__container mt-4">
+        <div class="row kill_grib_on_dacha__content">
+            <div class="offset-lg-1 col-lg-10 offset-md-1 col-md-10 kill_grib_on_dacha__block_main_text text-center">
+                <p class="kill_grib_on_dacha__main_text"><span style="color:red; font-weight: 800;">Уничтожение </span>грибка</p>
             </div>
-            <div class="offset-lg-3 col-lg-6 text-center kill_plesen_on_dacha__block_text mb-3">
+            <div class="offset-lg-3 col-lg-6 text-center kill_grib_on_dacha__block_text mb-3">
                 <div class="hr"></div>
-                <p class="kill_plesen_on_dacha__text">Профессиональное уничтожение плесени в квартирах</p>
+                <p class="kill_grib_on_dacha__text">Профессиональная борьба с грибком в квартирах и домах</p>
             </div>
         </div>
     </div>>
@@ -197,36 +197,61 @@
 
     <!-- Главный текст на странице -->
     <!-- НАЧАЛО -->
-    <div class="container main_text_on_page_plesen__container">
-        <div class="main_text_on_page_plesen__content">
-            <p class="text_on_page_plesen__text">В старых домах часто нарушена циркуляция воздуха из-за физического и морального устаревания несущих конструкций. На кухнях, ванной и в санузле «хрущевок», коммунальных квартир и других построек старого фонда часто образуется серая и черная плесень. Поначалу хозяева квартир пытаются отмыть ее, затем — скрыть косметическим ремонтом, но все это приносит временный эффект, но затем опасный налет появляется вновь.</p>
+    <div class="container main_text_on_page_grib__container">
+        <div class="main_text_on_page_grib__content">
             <div class="hr"></div>
-            <p class="text_on_page_plesen__main_text">Почему стоит заказать услуги специалистов? </p>
+            <p class="text_on_page_grib__main_text">Уничтожение грибка</p>
             <div class="hr"></div>
-            <p class="text_on_page_plesen__text">Уничтожение плесени в квартире с первого раза может быть гарантировано только профессионалами. Плесень проникает глубоко в стены, поэтому необходимо применять специализированные препараты и не просто зачищать пораженные участки, а проводить тщательную антисептическую обработку. </p>
-            <p class="text_on_page_plesen__text">Перед началом работ мы обследуем помещения, подбираем средство для борьбы с плесенью в квартире, рассчитываем дозировку и расскажем как подготовиться к процедуре. Сразу отметим, что инсектициды, применяемые в борьбе с серой и черной плесенью на стенах и потолках в квартире, абсолютно безопасны для людей и домашних животных. Но перед визитом дезинфектора необходимо из кухни убрать все продукты, а из ванной и санузла – средства личной гигиены.</p>
+            <p class="text_on_page_grib__text">В зависимости от подвида, грибок может поражать камень, бетон, краску или древесину. При этом микроорганизмы проникают вглубь материалов и если вовремя не начать с ними борьбу, то зараженные участки превратятся в труху и их будет невозможно восстановить.</p>
             <div class="hr"></div>
-            <p class="text_on_page_plesen__main_text">5 причин обратиться к нам</p>
+            <p class="text_on_page_grib__main_text">Опасность грибка и сложность устранения</p>
             <div class="hr"></div>
-            <ul class="text_on_page_plesen__ul">
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Беремся за любые помещения и любую степень поражения.</p>
+            <p class="text_on_page_grib__text">Появление грибка не только портит внешний вид мебели и стен, но и опасно для вашего здоровья — микроорганизмы могут спровоцировать аллергию и заболевания дыхательных путей. Поэтому борьбу с ними нужно начинать как можно раньше.</p>
+            <p class="text_on_page_grib__text">Бороться с грибком при помощи уборки совершенно бессмысленно — если грибок успел проникнуть вглубь материала, то он будет появляться снова и снова. Гарантированно избавиться от него можно только при помощи специалистов, которые используют профессиональные средства, умеют правильно обрабатывать поверхности и знают все места, которые поражаются наиболее часто.</p>
+            <div class="hr"></div>
+            <p class="text_on_page_grib__main_text">Как проводится уничтожение грибка в квартире?</p>
+            <div class="hr"></div>
+            <p class="text_on_page_grib__text">Основное средство для уничтожения плесени и грибка на стенах, полу и потолке – это обработка горячим парообразным инсектицидом при температуре 95°C. Горячий туман распыляется с помощью парогенератора, проникая во все поврежденные слои и воздушные зазоры между ними.</p>
+            <p class="text_on_page_grib__text">Как правило, обрабатывается не только пораженная область, но и все помещение целиком. Дело в том, что грибок выделяет специфические вещества и споры, с помощью которых он размножается, поэтому заражены могут быть места, на которых микроорганизмы пока не видны невооруженным глазом.</p>
+            <div class="hr"></div>
+            <p class="text_on_page_grib__main_text">Вся процедура проходит в несколько этапов:</p>
+            <div class="hr"></div>
+            <ul class="text_on_page_grib__ul">
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Помещение осматривают на наличие и глубину поражения грибком.</p>
                 </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Работаем 24 часа в сутки, без праздников и выходных. </p>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">С пораженной области на стенах снимается поверхностный слой, и на него накладывается антисептик.</p>
                 </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Можем выехать на заказ даже ночью.</p>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Рассчитывается дозировка инсектицида.</p>
                 </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Даем гарантию на все работы. </p>
-                </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">После обработки дезинфектор дает рекомендации, чтобы плесень не появилась вновь.</p>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Проводится обработка горячим туманом. При необходимости – и холодным (температура близка к комнатной).</p>
                 </li>
             </ul>
-            <p class="text_on_page_plesen__text">Позвоните по телефону ☎ <a href="tel:+380503559950" class="enter__link"> +38(050)-355-99-50 </a> или заполните форму обратной связи, чтобы специалисты компании смогли сориентировать вас по цене и сразу записать на удобные дату и время.</p>
-            <p class="text_on_page_plesen__text">Мы работаем 24 часа в сутки без выходных, поэтому всегда сможем найти наиболее удобный для вас момент!</p>
+            <div class="hr"></div>
+            <p class="text_on_page_grib__main_text">5 причин обратиться к нам</p>
+            <ul class="text_on_page_grib__ul">
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Вы можете позвонить нам или написать в чат в любое время, даже ночью.</p>
+                </li>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Мы работаем 24 часа в сутки без выходных и праздников.</p>
+                </li>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Стоимость услуг рассчитывается индивидуально в зависимости от размера помещения и выбранных средств.</p>
+                </li>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Мы всегда подробно рассказываем как подготовить квартиру к обработке.</p>
+                </li>
+                <li class="text_on_page_grib__li">
+                    <p class="text_on_page_grib__li_text">Мы даем гарантию на все работы.</p>
+                </li>
+            </ul>
+            <div class="hr"></div>
+            <p class="text_on_page_grib__text">Позвоните по телефону ☎ <a href="tel:+380503559950" class="enter__link"> +38(050)-355-99-50 </a> или заполните форму обратной связи, чтобы специалисты компании смогли сориентировать вас по цене и сразу записать на удобные дату и время.</p>
+            <p class="text_on_page_grib__text">Мы работаем 24 часа в сутки без выходных, поэтому всегда сможем найти наиболее удобный для вас момент!</p>
         </div>
     </div>
     <!-- КОНЕЦ -->
