--- a/dezincekciya/komary.html
+++ b/dezincekciya/komary.html
@@ -330,7 +330,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-2 text-left footer">
-                        <p class="footer_title"><img src="img/logo_for_the_header.jpg" width="40px" height="40px" alt=""> DEZSAN</p>
+                        <p class="footer_title"><img src="../img/logo_for_the_header.jpg" width="40px" height="40px" alt=""> DEZSAN</p>
                         <p class="footer_content">ООО "ДЕЗСАН"</p>
                         <p class="footer_content">ЕГРПОУ 43469157</p>
                     </div>
