--- a/question-answer.html
+++ b/question-answer.html
@@ -53,29 +53,46 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинсекция</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дератизация</a>
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинфекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Фумигация</a>
+                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
                             </li>  
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Для организаций</a>
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Акции</a>
-                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Контакты</a>
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
