--- a/dezincekciya/tarakan.html
+++ b/dezincekciya/tarakan.html
@@ -90,7 +90,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(../img/таракан_1.jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(../img/IMG_2233.jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
