--- a/deserpentaciya.html
+++ b/deserpentaciya.html
@@ -83,9 +83,9 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="deserpentaciya/grib.html">Грибы</a></li>
-                                    <li><a class="dropdown-item" href="deserpentaciya/plesen.html">Плесень</a></li>
-                                    <li><a class="dropdown-item" href="deserpentaciya/virus.html">Вирус</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
