--- a/phymigaciya.html
+++ b/phymigaciya.html
@@ -89,7 +89,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="phymigaciya.html">Десерпентация</a>
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
