--- a/phymigaciya.html
+++ b/phymigaciya.html
@@ -111,7 +111,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(img/фумигация\ складов.jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(img/фумигация\ складов\ \(2\).jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -188,7 +188,7 @@
     <!-- Главное содержание страницы --> 
     <!-- НАЧАЛО -->
     <div class="container content-on-main-page">
-        <h1>    <strong><span>Фумигация</span>: способы, этапы</strong></h1>
+        <h1><strong><span>Фумигация</span>: способы, этапы</strong></h1>
         <br><br>
     </div>
     <!-- КОНЕЦ -->
@@ -221,7 +221,8 @@
             <p class="text_on_page_phymigaciya__main_text">Этапы фумигации</p>
             <div class="hr"></div>
             <p class="text_on_page_phymigaciya__gallary text-center">
-                <img src="img/фумигац" class="text_on_page_phymigaciya__img">
+                <img src="img/фумигация зерна.jpg" class="text_on_page_phymigaciya__img">
+                <img src="img/фумигация инфо 2.jpg" class="text_on_page_phymigaciya__img"> 
             </p>
             <ul class="text_on_page_phymigaciya__ul">
                 <li class="text_on_page_phymigaciya__li">
@@ -243,6 +244,8 @@
             <div class="hr"></div>
             <p class="text_on_page_phymigaciya__gallary text-center">
                <img src="img/фумигация зерна 1.png" class="text_on_page_phymigaciya__img"> 
+               <img src="img/фумигация элеваторов.jpg" class="text_on_page_phymigaciya__img"> 
+               <img src="img/фумигация элевторов.jpg" class="text_on_page_phymigaciya__img"> 
             </p>
             <p class="text_on_page_phymigaciya__text"><strong>Профессиональные методики:</strong></p>
             <ul class="text_on_page_phymigaciya__ul">
@@ -258,6 +261,8 @@
             </ul>
             <p class="text_on_page_phymigaciya__gallary text-center">
                 <img src="img/фумигация церковь.jpg" class="text_on_page_phymigaciya__img">
+                <img src="img/газация 2.png" class="text_on_page_phymigaciya__img"> 
+                <img src="img/газация.jpg" class="text_on_page_phymigaciya__img"> 
             </p>
         </div>
     </div>
