--- a/deserpentaciya.html
+++ b/deserpentaciya.html
@@ -116,19 +116,16 @@
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
                     <div class="first_block__text_content">
-                        <h1 class="first_block__main_text">Десерпентация</h1>
+                        <h1 class="first_block__main_text">Отлов и защита территории от змей</h1>
                         <ol class="first_block__list_with_text">
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых и постгарантийная обработка</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Современные методы обработки с применением безопасных препаратов для Вас и Вашего участка</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Индивидуальный план обработки для каждого объекта</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Накопленный опыт наших специалистов-герпентологов за короткое время позволит отловить и создать барьер от опасных змей</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Безопасность для вас, вашей семьи и питомцев - применяемые средства сертифицированы и не несут вреда людям и питомцам</span>
-                            </li>
-                            <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно, 7 дней в неделю</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Выезд в любое время. Работаем 24 часа 7 дней в неделю, без праздников и выходных</span>
                             </li>
                         </ol>
                         <p class="text-center first_block__link">
@@ -286,6 +283,10 @@
 
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
+    <div class="container content-on-main-page">
+        <h1><strong><span></span>ОСТАВЬТЕ ЗАЯВКУ И ПОЛУЧИТЕ СКИДКУ НА АКАРИЦИДНУЮ ОБРАБОТКУ ТЕРРИТОРИИ ОТ КЛЕЩЕЙ</strong></h1>
+        <br><br>
+    </div>
     <div id="send_form" class="container-fluid pb-2">
         <div class="container container_of_the_form">
             <h4>Заполните форму и получите персональное предложение</h4>
@@ -316,13 +317,13 @@
                     <div class="title">
                         <p class="garantiya_title title_shadow">100% гарантия</p>
                     </div>
-                    <p class="garantiya_content">Мы применяем проверенные на практике методы и приёмы борьбы с любыми бытовыми насекомыми и грызунами. Работы на Ваших объектах будут выполнены независимо от времени года и прочих условий.</p>
+                    <p class="garantiya_content">Мы используем современное оборудование с применением безопасных препаратов для Вас и Вашего участка. Это позволит достигнуть максимального  эффекта за короткое время</p>
                 </div>
                 <div class="col-lg-3 col-md-6 garantiya_block">
                     <div class="title">
                         <p class="garantiya_title title_shadow">безопастность</p>
                     </div>
-                    <p class="garantiya_content">Мы используем лучшие современные препараты, дающие стабильный результат в полевых условиях. Все препараты сертифицированы (предоставлем сертификат соответствия).</p>
+                    <p class="garantiya_content">Наши опытные специалисты - герпентологи быстро и качественно проведут отлов и создадут "барьер" от дальнейшего проникновения ЗМЕЙ на Вашу территорию</p>
                 </div>
                 <div class="col-lg-3 col-md-6 garantiya_block">
                     <div class="title">
