--- a/index.html
+++ b/index.html
@@ -57,7 +57,52 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
+                            </li>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>  
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
+                            </li>
+                            <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
@@ -77,7 +122,7 @@
                                     <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
                                     <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
                                 </ul>
-                            </li>
+                            </li> 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -85,19 +130,7 @@
                                     <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
                                     <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
                                 </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
-                            </li>  
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -118,20 +151,20 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/фото_3.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/IMG_2236.jpg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h5>
                         <p>Быстро. Качественно. Надежно.</p>
                     </div> -->
                 </div>    
                 <div class="carousel-item">
-                    <img src="img/фото_1.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/EA20CC28-1E20-4C41-B5AB-6FD68E51A79D.jpg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Заботимся о Вашей безопасности</h5>
                     </div> -->
                 </div>
                 <div class="carousel-item">
-                <img src="img/фото_2.jpg" class="d-block carousel_img w-100" alt="...">
+                <img src="img/IMG_2238.jpg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Гарантируем результат!</h5>
                     </div> -->
@@ -294,22 +327,6 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/blocha.png" alt=""> 
-                                </i>
-                            </div>
-                            <h3 class="one_card__title title_shadow">Блохи</h3>
-                            <p class="one_card__content">Блохи являются мелкими (0,5 – 5 мм) бескрылыми насекомыми, с колюще-сосущим ротовым аппаратом. Тело блох сплющено с боков, ноги</p>
-                            <p class="one_card__link">Узнать больше...</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
-                <div class="one_card">
-                    <a href="">
-                        <div class="one_card__infa">
-                            <div class="one_card__icon">
-                                <i class="fa"> 
                                     <img src="img/ikonka_102h102_mysh.png" alt=""> 
                                 </i>
                             </div>
@@ -326,11 +343,11 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/ikonka_102h102_gribok (1).png" alt=""> 
+                                    <img src="img/dezinsekcija.png" alt=""> 
                                 </i>
                             </div>
-                            <h3 class="one_card__title title_shadow">грибок</h3>
-                            <p class="one_card__content">Дезинфекция и обеззараживание помещения. Устранение проблем с вентиляцией. Гарантия на 100%.</p>
+                            <h3 class="one_card__title title_shadow">Дезинсекция</h3>
+                            <p class="one_card__content">Уничтожение всех видов паразитов в помещениях, на складах, подвалах. Недорого</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -342,10 +359,10 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/dezodoracija.png" alt=""> 
+                                    <img src="img/deratacija.png" alt=""> 
                                 </i>
                             </div>
-                            <h3 class="one_card__title title_shadow">Дезодорация</h3>
+                            <h3 class="one_card__title title_shadow">Дератизация</h3>
                             <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
@@ -358,11 +375,11 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="" alt=""> 
+                                    <img src="img/dezinfekcija.png" alt=""> 
                                 </i>
                             </div>
-                            <h3 class="one_card__title title_shadow">Дезинвация</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <h3 class="one_card__title title_shadow">Дезинфекция</h3>
+                            <p class="one_card__content">Блохи являются мелкими (0,5 – 5 мм) бескрылыми насекомыми, с колюще-сосущим ротовым аппаратом. Тело блох сплющено с боков, ноги</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -393,7 +410,39 @@
                                     <img src="img/insekticidnye-lampy.png" alt=""> 
                                 </i>
                             </div>
-                            <h3 class="one_card__title title_shadow">Инсектицидные лампы</h3>
+                            <h3 class="one_card__title title_shadow">Отпугиватель змей</h3>
+                            <p class="one_card__content"><strong>ZmeelOFF</strong> 1л,125г</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/ikonka_102h102_gribok (1).png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">грибок</h3>
+                            <p class="one_card__content">Дезинфекция и обеззараживание помещения. Устранение проблем с вентиляцией. Гарантия на 100%.</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>           
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/ikonka_102h102_plesen (1).png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">Плесень</h3>
                             <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
@@ -416,22 +465,6 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
-                <div class="one_card">
-                    <a href="">
-                        <div class="one_card__infa">
-                            <div class="one_card__icon">
-                                <i class="fa"> 
-                                    <img src="img/ikonka_102h102_plesen (1).png" alt=""> 
-                                </i>
-                            </div>
-                            <h3 class="one_card__title title_shadow">Плесень</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
-                            <p class="one_card__link">Узнать больше...</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
         </div>
 
 
@@ -442,21 +475,23 @@
     <!-- НАЧАЛО -->
     <div id="send_form" class="container-fluid pb-2">
         <div class="container container_of_the_form">
-            <h4>Заполните форму и получите персональное предложение</h4>
-            <div class="row g-4">
-                <div class="col-lg-3 col-md-4">
-                    <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name" required>
+            <form action="mail.php" method="POST">
+                <h4>Заполните форму и получите персональное предложение</h4>
+                <div class="row g-4">
+                    <div class="col-lg-3 col-md-4">
+                        <input type="text" class="form-control container_of_the_form__input" name="userName" placeholder="Имя" aria-label="First name" required>
+                    </div>
+                    <div class="col-lg-3 col-md-4 m-auto mt-4">
+                        <input type="number" class="form-control container_of_the_form__input" name="userPhone" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                    </div>
+                    <div class="col-lg-3 col-md-4">
+                        <input type="text" class="form-control container_of_the_form__input" name="userEmail" placeholder="Почта" aria-label="Last name" required>
+                    </div>
                 </div>
-                <div class="col-lg-3 col-md-4 m-auto mt-4">
-                    <input type="number" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                <div class="row">
+                    <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
                 </div>
-                <div class="col-lg-3 col-md-4">
-                    <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name" required>
-                </div>
-            </div>
-            <div class="row">
-                <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-            </div>
+            </form>
         </div>
     </div>
     <!-- КОНЕЦ -->
