--- a/deratizaciya.html
+++ b/deratizaciya.html
@@ -119,7 +119,7 @@
                         <h1 class="first_block__main_text">Дератизация</h1>
                         <ol class="first_block__list_with_text">
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых и постгарантийная обработка</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых </span>
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Индивидуальный план обработки для каждого объекта</span>
@@ -261,7 +261,7 @@
                     <p class="text_on_page_deratizaciya__li_text"><strong>3. Проводим дератизацию.</strong> Мы используем химический метод и применяем профессиональные яды, которые невозможно найти в открытом доступе. Препарат действует в течение двух недель и позволяет предотвратить повторное появление грызунов. На все работы дается гарантия. </p>
                 </li>
                 <li class="text_on_page_deratizaciya__li">
-                    <p class="text_on_page_deratizaciya__li_text"><strong>4. Утилизируем грызунов.Утилизируем грызунов.</strong> После уничтожения грызуны утилизируются, производится очистка и дезинфекция участка от следов жизнедеятельности.</p>
+                    <p class="text_on_page_deratizaciya__li_text"><strong>4. Утилизируем грызунов.</strong> После уничтожения грызуны утилизируются, производится очистка и дезинфекция участка от следов жизнедеятельности.</p>
                 </li>
             </ul>
             <p class="text_on_page_deratizaciya__gallary">
