--- a/desinphekciya.html
+++ b/desinphekciya.html
@@ -119,7 +119,7 @@
                         <h1 class="first_block__main_text">Дезинфекция</h1>
                         <ol class="first_block__list_with_text">
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых и постгарантийная обработка</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых </span>
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Индивидуальный план обработки для каждого объекта</span>
@@ -289,7 +289,7 @@
             <div class="hr"></div>
             <p class="text_on_page_desinphekciya__main_text">Дезинфекция помещений для организаций</p>
             <div class="hr"></div>
-            <p class="text_on_page_desinphekciya__text">Наша компания оказывает услуги дезинфекции юридических лиц с полной подготовкой документов для СЭС и Роспотребнадзора.</p>
+            <p class="text_on_page_desinphekciya__text">Наша компания оказывает услуги дезинфекции юридических лиц с полной подготовкой.</p>
             <p class="text_on_page_desinphekciya__text">Она подразделяется на три вида:</p>
             <ul class="text_on_page_desinphekciya__ul">
                 <li class="text_on_page_desinphekciya__li">
@@ -307,8 +307,7 @@
             <p class="text_on_page_desinphekciya__main_text">Дезинфекция помещений в медицинских организациях</p>
             <div class="hr"></div>
             <p class="text_on_page_desinphekciya__text">Периодическая дезинфекция и стерилизация в медицинских организациях – это обязательное условие для нормального функционирования учреждений. К ним относят не только больницы (госпитали) и поликлиники, но и станции скорой помощи, переливания крови, мед. центры, диспансеры, санатории.</p>
-            <p class="text_on_page_desinphekciya__text">Мы проводим дезинфекцию помещения и оборудования медицинских организаций, в том числе обеззараживание воздуха, состав которого приходит в соответствие с нормами СЭС. С каждым учреждением мы заключаем договор, после проведения работ выдаем полный пакет документов для Санэпидстанции и Роспотребнадзора.</p>
-            <p class="text_on_page_desinphekciya__text">Предлагаем дезинфекцию аккредитованной организации от туберкулеза, кори, тифа и других опасных заболеваний. Заключаем договора на разовое и постоянное обслуживание юридических лиц. Для каждой организации предусмотрена письменная гарантия.</p>
+            <p class="text_on_page_desinphekciya__text">Мы проводим дезинфекцию помещения и оборудования медицинских организаций, в том числе обеззараживание воздуха, состав которого приходит в соответствие с нормами МОЗ Украины. С каждым учреждением мы заключаем договор, после проведения работ выдаем полный пакет документов.</p>
             <div class="hr"></div>
             <p class="text_on_page_desinphekciya__main_text">Почему самостоятельная дезинфекция не работает?</p>
             <div class="hr"></div>
@@ -323,7 +322,6 @@
             <p class="text_on_page_desinphekciya__text">Вы задумались о дезинфекции своего офиса, помещения или квартиры?</p>
             <p class="text_on_page_desinphekciya__text">Специалисты ООО "ДЕЗСАН" подберут для вас оптимальное решение, с учетом ваших пожеланий и спецификаций. После обработки мы проинструктируем вас и ваш персонал о правильном соблюдении чистоты и поддержании порядка в помещении.</p>
             <p class="text_on_page_desinphekciya__text">Работаем круглосуточно и проводим все мероприятия в кратчайшие сроки.</p>
-            <p class="text_on_page_desinphekciya__text">Есть разрешение от СЭС и РПН на выдачу полного пакета документов для контролирующих органов.</p>
             <p class="text_on_page_desinphekciya__text">Огромный опыт позволил создать по-настоящему эффективные схемы работы, с использованием только безопасных для людей химических веществ и лучшего оборудования.</p>
             <blockquote>Гарантируем полную конфиденциальность о проведении работ.</blockquote>
             <p class="text_on_page_desinphekciya__text">Чистота — это не только залог вашего здоровья, но и гарант вашей безопасности в битве с вирусами и инфекциями. Заполните заявку и защитите себя и своих близких от инфекций!</p>
