--- a/dezincekciya.html
+++ b/dezincekciya.html
@@ -152,7 +152,7 @@
     <!-- НАЧАЛО -->
     <div class="container enter_to_dezincekciya__container mt-4 mb-5">
         <div class="enter_to_dezincekciya__content">
-            <p class="enter_to_dezincekciya__text">Насекомые появились на Земле гораздо раньше человека. И постоянно сопровождают его, на протяжении всей жизни. Однако, нахождение насекомых в квартире противоречит нормам СЭС и опасно для жизни и здоровья жильцов.</p>
+            <p class="enter_to_dezincekciya__text">Насекомые появились на Земле гораздо раньше человека. И постоянно сопровождают его, на протяжении всей жизни. Однако, нахождение насекомых в квартире опасно для жизни и здоровья жильцов.</p>
             <p class="enter_to_dezincekciya__text">Для того, чтобы избавить свой дом от мелких вредителей необходимо проводить дезинсекцию.</p>
             <p class="enter_to_dezincekciya__text">Дезинсекция — это комплекс мер по обработке помещения, не важно, будь то квартира или офис, от всех видов вредных насекомых. Заказать дезинсекцию можно не только для борьбы с уже поселившимися в доме насекомыми, но и для сезонной профилактики.</p>
         </div>
