--- a/index.html
+++ b/index.html
@@ -477,20 +477,20 @@
         <div class="container container_of_the_form">
             <form action="mail.php" method="POST">
                 <h4>Заполните форму и получите персональное предложение</h4>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-4">
+                <!-- <div class="row g-4">
+                    <div class="col-lg-3 col-md-4"> -->
                         <input type="text" class="form-control container_of_the_form__input" name="userName" placeholder="Имя" aria-label="First name" required>
-                    </div>
-                    <div class="col-lg-3 col-md-4 m-auto mt-4">
+                    <!-- </div>
+                    <div class="col-lg-3 col-md-4 m-auto mt-4"> -->
                         <input type="number" class="form-control container_of_the_form__input" name="userPhone" placeholder="Номер телефона для связи" aria-label="Last name" required>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
+                    <!-- </div>
+                    <div class="col-lg-3 col-md-4"> -->
                         <input type="text" class="form-control container_of_the_form__input" name="userEmail" placeholder="Почта" aria-label="Last name" required>
-                    </div>
+                    <!-- </div>
                 </div>
-                <div class="row">
+                <div class="row"> -->
                     <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-                </div>
+                <!-- </div> -->
             </form>
         </div>
     </div>
