--- a/dezincekciya/clop.html
+++ b/dezincekciya/clop.html
@@ -207,7 +207,7 @@
             <p class="text_on_page_clop__main_text">Как наша служба истребляет клопов</p>
             <div class="hr"></div>
             <p class="text_on_page_clop__text">Мы применяем только химические методы уничтожения клопов в квартире, так как они доказали свою быстроту и эффективность.</p>
-            <p class="text_on_page_clop__text">Главное требование ко всем видам инсектицидов – низкая токсичность для человека и домашних животных. Согласно требованиям ГОСТ, токсичность препаратов подразделяется на 4 группы от чрезвычайно до мало опасных. Токсичность оценивается по показателю СД50, то есть, дозой в мкг на 1 кг веса, вызывающей от 50% смерти подопытных организмов. Именно поэтому препараты, применяемые при профессиональном уничтожении насекомых, не продаются в свободной продаже, так как при неправильном применении могут возникнуть тяжелые отравления.</p>
+            <p class="text_on_page_clop__text">Главное требование ко всем видам инсектицидов – низкая токсичность для человека и домашних животных. Токсичность препаратов подразделяется на 4 группы от чрезвычайно до мало опасных. Токсичность оценивается по показателю СД50, то есть, дозой в мкг на 1 кг веса, вызывающей от 50% смерти подопытных организмов. Именно поэтому препараты, применяемые при профессиональном уничтожении насекомых, не продаются в свободной продаже, так как при неправильном применении могут возникнуть тяжелые отравления.</p>
             <p class="text_on_page_clop__text">Существует два основных подхода при использовании дезинфицирующих растворов для обработки:</p>
             <ul class="text_on_page_clop__ul">
                 <li class="text_on_page_clop__li">
@@ -230,7 +230,7 @@
             <div class="hr"></div>
             <p class="text_on_page_clop__main_text">Поможем избавиться от клопов навсегда!</p>
             <div class="hr"></div>
-            <p class="text_on_page_clop__text">Наша КОМПАНИЯ работает на результат и при дает гарантию на уничтожение клопов при выполнении всех рекомендаций. Учтите, что возможно проблема кроется не в вашей квартире, а в жилье неблагополучных соседей.  Для вашего удобства мы готовы выехать на обработку 7 дней в неделю 24 часа в сутки. Для частных лиц удобнее всего проводить дезинсекцию днем, когда все на работе или учебе, а вот для юридических лиц прекрасно подойдет ночное время. Стоимость всегда будет зависеть от размера помещения и выбранного способа обработки от клопов.</p>
+            <p class="text_on_page_clop__text">Наша КОМПАНИЯ работает на результат и дает гарантию на уничтожение клопов при выполнении всех рекомендаций. Учтите, что возможно проблема кроется не в вашей квартире, а в жилье неблагополучных соседей.  Для вашего удобства мы готовы выехать на обработку 7 дней в неделю 24 часа в сутки. Для частных лиц удобнее всего проводить дезинсекцию днем, когда все на работе или учебе, а вот для юридических лиц прекрасно подойдет ночное время. Стоимость всегда будет зависеть от размера помещения и выбранного способа обработки от клопов.</p>
             <p class="text_on_page_clop__text">Позвоните нам ☎ <a href="tel:+380503559950" class="enter__link"> +38(050)-355-99-50 </a> или заполните форму обратной связи, чтобы специалисты ДЕЗСАН смогли ответить на все вопросы и записать вас на удобные дату и время.</p>
         </div>
     </div>
