--- a/dezincekciya/kleshhi.html
+++ b/dezincekciya/kleshhi.html
@@ -104,7 +104,7 @@
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Используем препараты, безопасные для людей и животных</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантия результата - проводим бесплатно повторную обработку, если насекомые не исчезли</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантируем достижение максимального эффекта</span>
                             </li>
                         </ol>
                         <p class="text-center first_block__link"><a href="tel:+380503559950">+38(050)-355-99-50</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
