--- a/dezincekciya/muraviyi.html
+++ b/dezincekciya/muraviyi.html
@@ -104,7 +104,7 @@
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Абсолютно безопасно для людей, животных и вещей</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Даем гарантию результата - если насекомые не исчезли, проводим повторную обработку бесплатно</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Даем гарантию результата</span>
                             </li>
                         </ol>
                         <p class="text-center first_block__link"><a href="tel:+380503559950">+38(050)-355-99-50</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
@@ -233,7 +233,7 @@
             <div class="hr"></div>
             <p class="text_on_page_muraviyi__main_text">Опыт – залог успеха</p>
             <div class="hr"></div>
-            <p class="text_on_page_muraviyi__text">Победить в сражении с вражескими полчищами по силам только опытному полководцу. Необходимо знать все о повадках врага и безошибочно применять оружие. Война с муравьями, как и любая другая, требует опыта и знаний. Самые эффективные средства уничтожения насекомых – химические препараты. Вредители исчезают после первой обработки. Инсектициды безопасны для человека и домашних животных потому, что профессионалы точно рассчитывают дозировку и знают все тонкости применения препарата. Любая ошибка неопытного человека может нанести серьезный вред здоровью. Почему нам доверяют</p>
+            <p class="text_on_page_muraviyi__text">Победить в сражении с вражескими полчищами по силам только опытному полководцу. Необходимо знать все о повадках врага и безошибочно применять оружие. Война с муравьями, как и любая другая, требует опыта и знаний. Самые эффективные средства уничтожения насекомых – химические препараты. Вредители исчезают после первой обработки. Инсектициды безопасны для человека и домашних животных потому, что профессионалы точно рассчитывают дозировку и знают все тонкости применения препарата. Любая ошибка неопытного человека может нанести серьезный вред здоровью.</p>
             <p class="text_on_page_muraviyi__text">Позвоните нам ☎ <a class="enter__link" href="tel:+380503559950">+38(050)-355-99-50</a>,  <a class="enter__link" href="tel:+380933307707">+38(093)-330-77-07</a> или заполните форму обратной связи, чтобы наши специалисты сориентировали вас по цене и срокам. Мы работаем круглосуточно, без выходных, поэтому процедура может проводиться в максимально удобное для вас время! </p>
         </div>
     </div>
