--- a/dezincekciya/tarakan.html
+++ b/dezincekciya/tarakan.html
@@ -104,7 +104,7 @@
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Абсолютно безопасно для людей, животных и вещей</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантируем результат, выезжаем бесплатно во время действия гарантии</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантируем результат</span>
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Выгодные условия при заключении договора</span>
@@ -206,7 +206,7 @@
             <p class="text_on_page_tarakan__text">Самостоятельное уничтожение тараканов – это борьба, в которой насекомые зачастую одерживают победу. У них быстро вырабатывается резистентность к химическим препаратам, а домашние средства для обработки, которые помогли в прошлый раз, могут не сработать в следующий. В результате истребление тараканов может затянуться, и все это время жители квартиры или посетители заведения общественного питания будут подвергаться большому риску. </p>
             <p class="text_on_page_tarakan__text">Если вы хотите быстрого и гарантированного результата, лучше вызвать профессиональную службу дезинсекторов, предлагающих уничтожение</p>
             <div class="hr"></div>
-            <p class="text_on_page_tarakan__main_text">Гарантируем полное уничтожение тараканов!</p>
+            <p class="text_on_page_tarakan__main_text">Гарантируем полное уничтожение тараканов при соблюдении указаний специалистов!</p>
             <div class="hr"></div>
             <p class="text_on_page_tarakan__text">И это только одно преимущество профессиональной дезинсекции среди прочих: </p>
             <ul class="text_on_page_tarakan__ul">
