--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <div class="dropdown2">
-                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дератизация</a>
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="deratizaciya.html">Дератизация</a>
                                 <div class="dropdown-content2">
                                     <a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a>
                                     <a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a>
@@ -79,23 +79,26 @@
                                 </div>
                             </div>
                             <div class="dropdown3">
-                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинфекция</a>
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="desinphekciya.html">Дезинфекция</a>
                                 <div class="dropdown-content3">
                                     <a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a>
                                     <a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a>
                                     <a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a>
                                 </div>
                             </div>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
-                            </li>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
                             <div class="dropdown4">
                                 <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="phymigaciya.html">Фумигация</a>
                                 <div class="dropdown-content4">
                                     <a class="dropdown-item" href="phymigaciya/sklad.html">Склады</a>
                                     <a class="dropdown-item" href="phymigaciya/wood_home.html">Деревянные дома</a>
                                 </div>
-                            </div>  
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
@@ -363,7 +366,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Дератизация</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <p class="one_card__content">100% гарантия уничтожения мышей и крыс, а также следов их жизнедеятельности</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -379,7 +382,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Дезинфекция</h3>
-                            <p class="one_card__content">Блохи являются мелкими (0,5 – 5 мм) бескрылыми насекомыми, с колюще-сосущим ротовым аппаратом. Тело блох сплющено с боков, ноги</p>
+                            <p class="one_card__content">Полное уничтожение плесени и грибка в помещении. 100% гарантия</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -389,9 +392,9 @@
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
-                            <div class="one_card__icon">
+                            <div class="one_card__icon" style="position: relative;">
                                 <i class="fa"> 
-                                    <img src="" alt=""> 
+                                    <img src="img/дез.jpg" alt="" style="position: absolute; top: 13px; left: 0;"> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Фумигация</h3>
@@ -407,7 +410,7 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/insekticidnye-lampy.png" alt=""> 
+                                    <img src="img/препарат.jpg" alt="" style="height: 90px;"> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Отпугиватель змей</h3>
@@ -477,20 +480,20 @@
         <div class="container container_of_the_form">
             <form action="mail.php" method="POST">
                 <h4>Заполните форму и получите персональное предложение</h4>
-                <!-- <div class="row g-4">
-                    <div class="col-lg-3 col-md-4"> -->
+                <div class="row g-4">
+                    <div class="col-lg-3 col-md-4">
                         <input type="text" class="form-control container_of_the_form__input" name="userName" placeholder="Имя" aria-label="First name" required>
-                    <!-- </div>
-                    <div class="col-lg-3 col-md-4 m-auto mt-4"> -->
+                    </div>
+                    <div class="col-lg-3 col-md-4 m-auto mt-4">
                         <input type="number" class="form-control container_of_the_form__input" name="userPhone" placeholder="Номер телефона для связи" aria-label="Last name" required>
-                    <!-- </div>
-                    <div class="col-lg-3 col-md-4"> -->
+                    </div>
+                    <div class="col-lg-3 col-md-4">
                         <input type="text" class="form-control container_of_the_form__input" name="userEmail" placeholder="Почта" aria-label="Last name" required>
-                    <!-- </div>
+                    </div>
                 </div>
-                <div class="row"> -->
+                <div class="row">
                     <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-                <!-- </div> -->
+                </div>
             </form>
         </div>
     </div>
